--- a/src/resource.rc
+++ b/src/resource.rc
@@ -131,7 +131,7 @@ IDD_EDITDATA DIALOGEX 50, 50, 500, 300
 	CAPTION "View/Edit table data"
 	FONT 10, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	CONTROL "", IDC_DLG_QUERYLIST, WC_LISTVIEW, WS_VSCROLL | WS_TABSTOP | LVS_REPORT, 0, 10, 400, 80, WS_EX_STATICEDGE
+	CONTROL "", IDC_DLG_ROWS, WC_LISTVIEW, WS_VSCROLL | WS_TABSTOP | LVS_REPORT, 0, 10, 400, 80, WS_EX_STATICEDGE
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -164,7 +164,7 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_SETTINGS DIALOGEX 50, 50, 200, 330
+IDD_SETTINGS DIALOGEX 50, 50, 200, 347
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME | WS_CLIPCHILDREN
 	CAPTION "Settings"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -183,37 +183,38 @@ BEGIN
 	AUTOCHECKBOX	"Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 5, 110, 180, 16, BS_NOTIFY | WS_TABSTOP
 	AUTOCHECKBOX	"Enable built-in REST web server on port", IDC_DLG_HTTP_SERVER, 5, 125, 150, 16, BS_NOTIFY | WS_TABSTOP
 	EDITTEXT		IDC_DLG_HTTP_SERVER_PORT, 160, 127, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
-
 	AUTOCHECKBOX	"Check for updates automatically", IDC_DLG_CHECK_UPDATES, 5, 110 + 30, 180, 16, BS_NOTIFY | WS_TABSTOP
-	LTEXT	        "On Escape", IDC_DLG_LABEL, 5, 158, 50, 16, BS_NOTIFY
-	COMBOBOX		IDC_DLG_EXIT_BY_ESCAPE, 55, 155, 140, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	AUTOCHECKBOX	"Use TAB instead ENTER to commit autocomplete", IDC_DLG_TAB_AUTOCOMPLETE, 5, 110 + 30 + 15, 180, 16, BS_NOTIFY | WS_TABSTOP
 
-	LTEXT		   "Editor indent", IDC_DLG_LABEL, 5, 149 - 20 + 30 + 15, 50, 14, SS_LEFT
-	COMBOBOX		IDC_DLG_INDENT, 55, 146 - 20 + 30 + 15, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	LTEXT	        "On Escape", IDC_DLG_LABEL, 5, 158 + 15 + 2, 50, 16, BS_NOTIFY
+	COMBOBOX		IDC_DLG_EXIT_BY_ESCAPE, 55, 155 + 15 + 2, 140, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
-	LTEXT		   "Max rows in result output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 164 - 20 + 30 + 15, 150, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_ROW_LIMIT, 160, 162 - 20 + 30 + 15, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT		   "Editor indent", IDC_DLG_LABEL, 5, 149 - 20 + 30 + 15 + 15 + 2, 50, 14, SS_LEFT
+	COMBOBOX		IDC_DLG_INDENT, 55, 146 - 20 + 30 + 15 + 15 + 2, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
-	LTEXT		   "Max rows in the terminal output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 179 - 20 + 30 + 15, 155, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_CLI_ROW_LIMIT, 160, 177 - 20 + 30 + 15, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT		   "Max rows in result output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 164 - 20 + 30 + 15 + 15 + 2, 150, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_ROW_LIMIT, 160, 162 - 20 + 30 + 15 + 15 + 2, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Beep if the query took longer than N ms", IDC_DLG_LABEL, 5, 179 + 15 - 20 + 30 + 15, 150, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_BEEP_ON_QUERY_END, 160, 177 + 15 - 20 + 30 + 15, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT		   "Max rows in the terminal output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 179 - 20 + 30 + 15 + 15 + 2, 155, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_CLI_ROW_LIMIT, 160, 177 - 20 + 30 + 15 + 15 + 2, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Grid colors", IDC_DLG_LABEL, 5, 190 + 30 + 2 + 15, 35, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_GRID_COLOR_EDIT, 45 - 2, 190 + 30 + 15, 29, 12, ES_CENTER | NOT WS_VISIBLE | WS_CLIPSIBLINGS | WS_TABSTOP
+	LTEXT		   "Beep if the query took longer than N ms", IDC_DLG_LABEL, 5, 179 + 15 - 20 + 30 + 15 + 15 + 2, 150, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_BEEP_ON_QUERY_END, 160, 177 + 15 - 20 + 30 + 15 + 15 + 2, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "TEXT", IDC_DLG_GRID_COLOR, 45 - 2, 190 + 30 + 15, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY
-	LTEXT		   "NULL", IDC_DLG_GRID_COLOR + 1, 45 + 30*1 - 2, 190 + 30 + 15, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
-	LTEXT		   "BLOB", IDC_DLG_GRID_COLOR + 2, 45 + 30*2 - 2, 190 + 30 + 15, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
-	LTEXT		   "INT", IDC_DLG_GRID_COLOR + 3, 45 + 30*3 - 2, 190 + 30 + 15, 29, 12, SS_CENTER  | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
-	LTEXT		   "REAL", IDC_DLG_GRID_COLOR + 4, 45 + 30*4 - 2, 190 + 30 + 15, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "Grid colors", IDC_DLG_LABEL, 5, 190 + 30 + 2 + 15 + 15 + 2, 35, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_GRID_COLOR_EDIT, 45 - 2, 190 + 30 + 15 + 15 + 2, 29, 12, ES_CENTER | NOT WS_VISIBLE | WS_CLIPSIBLINGS | WS_TABSTOP
 
-	LTEXT		   "Execute on a database connection", IDC_DLG_LABEL, 5, 190 + 30 + 20 + 15, 150, 10, SS_LEFT
-	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 230 + 20 + 15, 190, 40, 0
+	LTEXT		   "TEXT", IDC_DLG_GRID_COLOR, 45 - 2, 190 + 30 + 15 + 15 + 2, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY
+	LTEXT		   "NULL", IDC_DLG_GRID_COLOR + 1, 45 + 30*1 - 2, 190 + 30 + 15 + 15 + 2, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "BLOB", IDC_DLG_GRID_COLOR + 2, 45 + 30*2 - 2, 190 + 30 + 15 + 15 + 2, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "INT", IDC_DLG_GRID_COLOR + 3, 45 + 30*3 - 2, 190 + 30 + 15 + 15 + 2, 29, 12, SS_CENTER  | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "REAL", IDC_DLG_GRID_COLOR + 4, 45 + 30*4 - 2, 190 + 30 + 15 + 15 + 2, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
 
-	PUSHBUTTON "OK", IDC_DLG_OK, 70, 276 + 20 + 15, 60, 14, WS_TABSTOP
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 135, 276 + 20 + 15, 60, 14, WS_TABSTOP
+	LTEXT		   "Execute on a database connection", IDC_DLG_LABEL, 5, 190 + 30 + 20 + 15 + 15 + 2, 150, 10, SS_LEFT
+	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 230 + 20 + 15 + 15 + 2, 190, 40, 0
+
+	PUSHBUTTON "OK", IDC_DLG_OK, 70, 276 + 20 + 15 + 15 + 2, 60, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 135, 276 + 20 + 15 + 15 + 2, 60, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -357,6 +358,15 @@ BEGIN
 	PUSHBUTTON "Compare", IDC_DLG_COMPARE, 0, 0, 60, 14, WS_TABSTOP
 	CONTROL "", IDC_DLG_ORIGINAL, "RICHEDIT50W", ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP, 1, 1, 100, 100, WS_EX_STATICEDGE
 	CONTROL "", IDC_DLG_COMPARED, "RICHEDIT50W", ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL | WS_TABSTOP, 104, 1, 100, 100, WS_EX_STATICEDGE
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_FK_SELECTOR DIALOGEX 50, 50, 300, 200
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_SIZEBOX | DS_MODALFRAME
+	CAPTION "Foreign key selector"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	CONTROL "", IDC_DLG_ROWS, WC_LISTVIEW, WS_TABSTOP | LVS_AUTOARRANGE | LVS_REPORT | LVS_SHOWSELALWAYS | LVS_SINGLESEL, 0, 0, 100, 100, WS_EX_STATICEDGE
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -566,6 +576,22 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_TOOL_DESKTOP_SHORTCUT DIALOGEX 50, 50, 200, 60
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
+	CAPTION "Desktop shortcut"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	LTEXT "Link name", IDC_DLG_LABEL, 5, 7, 45, 14, SS_LEFT
+	EDITTEXT IDC_DLG_LINK_NAME, 50, 5, 145, 12
+
+	LTEXT "Table/View", IDC_DLG_LABEL, 5, 7 + 15, 45, 14, SS_LEFT
+	COMBOBOX IDC_DLG_TABLENAME, 50, 5 + 15, 145, 200, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_VISIBLE
+
+	PUSHBUTTON "OK", IDC_DLG_OK, 90, 42, 50, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 145, 42, 50, 14, WS_TABSTOP
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_CHART DIALOGEX 40, 30, 450, 260
 	STYLE WS_OVERLAPPEDWINDOW | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
 	CAPTION ""
@@ -658,7 +684,8 @@ BEGIN
 		MENUITEM "Vacuum database", IDM_VACUUM, GRAYED
 		MENUITEM "Reindex database", IDM_REINDEX, GRAYED
 		MENUITEM SEPARATOR
-		MENUITEM "Locate database", IDM_LOCATE, GRAYED
+		MENUITEM "Add desktop shortcut", IDM_DESKTOP_SHORTCUT, GRAYED
+		MENUITEM "Locate database", IDM_LOCATE_FILE, GRAYED
 		MENUITEM "Statistics", IDM_STATISTICS, GRAYED
 	END
 
@@ -1050,6 +1077,7 @@ BEGIN
 		"F2 - Edit cell value without clearing\n" \
 		"Space - Edit cell value with clearing\n" \
 		"Ctrl + Space - Set cell value as one of column values\n"
+		"Alt + Space - Select foreign key value\n"
 		"Alt + Click - Show data if the column references to another table by FK key\n" \
 		"Alt + Click - Open BLOB as file\n\n" \
 		"Row dialog\n" \
