--- a/src/resource.rc
+++ b/src/resource.rc
@@ -2,6 +2,7 @@
 #include <commctrl.h>
 #include <richedit.h>
 #include "resource.h"
+#include <colordlg.h>
 
 1 VERSIONINFO
 FILEVERSION GUI_VERSION2
@@ -13,7 +14,7 @@ FILETYPE VFT_APP {
 			VALUE "FileVersion", GUI_VERSION
 			VALUE "ProductName", "sqlite-gui\000"
 			VALUE "ProductVersion", GUI_VERSION
-			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020-2021\000"
+			VALUE "LegalCopyright", "Copyright \251 Little Brother 2020-2023\000"
 			VALUE "OriginalFilename", "sqlite-gui.exe\000"
 		}
 	}
@@ -164,57 +165,62 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_SETTINGS DIALOGEX 50, 50, 200, 347
+IDD_SETTINGS DIALOGEX 50, 50, 415, 200
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME | WS_CLIPCHILDREN
 	CAPTION "Settings"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	LTEXT		    "Font", IDC_DLG_LABEL, 5, 7, 30, 14, SS_LEFT
-	COMBOBOX		IDC_DLG_FONT_FAMILY, 35, 5, 125, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWN | CBS_HASSTRINGS
-	COMBOBOX		IDC_DLG_FONT_SIZE, 165, 5, 30, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	AUTOCHECKBOX "Autoload extensions", IDC_DLG_AUTOLOAD, 220, 3, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Open last database on startup", IDC_DLG_RESTORE_DB, 220, 18, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Restore editor tabs on startup", IDC_DLG_RESTORE_EDITOR, 220, 33, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Word wrap a text in an editor by default", IDC_DLG_WORD_WRAP, 220, 48, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Use TAB instead ENTER to commit autocomplete", IDC_DLG_TAB_AUTOCOMPLETE, 220, 63, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Ask when deleting a row", IDC_DLG_ASK_DELETE, 220, 78, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Turn off disk synchronization for batch operations", IDC_DLG_SYNC_OFF, 220, 93, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 220, 108, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Enable built-in REST web server on port", IDC_DLG_HTTP_SERVER, 220, 123, 150, 16, BS_NOTIFY | WS_TABSTOP
+	EDITTEXT IDC_DLG_HTTP_SERVER_PORT, 375, 125, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	AUTOCHECKBOX "Check for updates automatically", IDC_DLG_CHECK_UPDATES, 220, 138, 180, 16, BS_NOTIFY | WS_TABSTOP
 
-	AUTOCHECKBOX	"Autoload extensions", IDC_DLG_AUTOLOAD, 5, 20, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX	"Open last database on startup", IDC_DLG_RESTORE_DB, 5, 35, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX	"Restore editor tabs on startup", IDC_DLG_RESTORE_EDITOR, 5, 50, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX	"Ask when deleting a row", IDC_DLG_ASK_DELETE, 5, 80 - 15, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX	"Word wrap a text in an editor by default", IDC_DLG_WORD_WRAP, 5, 95 - 15, 180, 16, BS_NOTIFY | WS_TABSTOP
+	LTEXT "Font", IDC_DLG_FONT_LABEL, 5, 7, 20, 14, SS_LEFT
+	COMBOBOX IDC_DLG_FONT_FAMILY, 31, 5, 129, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWN | CBS_HASSTRINGS
+	COMBOBOX IDC_DLG_FONT_SIZE, 165, 5, 30, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
-	AUTOCHECKBOX	"Turn off disk synchronization for batch operations", IDC_DLG_SYNC_OFF, 5, 95, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX	"Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 5, 110, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX	"Enable built-in REST web server on port", IDC_DLG_HTTP_SERVER, 5, 125, 150, 16, BS_NOTIFY | WS_TABSTOP
-	EDITTEXT		IDC_DLG_HTTP_SERVER_PORT, 160, 127, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
-	AUTOCHECKBOX	"Check for updates automatically", IDC_DLG_CHECK_UPDATES, 5, 110 + 30, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX	"Use TAB instead ENTER to commit autocomplete", IDC_DLG_TAB_AUTOCOMPLETE, 5, 110 + 30 + 15, 180, 16, BS_NOTIFY | WS_TABSTOP
+	LTEXT "Editor", IDC_DLG_EDITOR_LABEL, 5, 24, 25, 14, SS_LEFT
+	LTEXT "KWRD", IDC_DLG_COLOR, 31, 22, 27, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY
+	LTEXT "FUNC", IDC_DLG_COLOR + 1, 59, 22, 26, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT "QUOT", IDC_DLG_COLOR + 2, 86, 22, 26, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT "CMNT", IDC_DLG_COLOR + 3, 113, 22, 26, 12, SS_CENTER  | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT "PRNS", IDC_DLG_COLOR + 4, 140, 22, 26, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT "PRGM", IDC_DLG_COLOR + 5, 167, 22, 26, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
 
-	LTEXT	        "On Escape", IDC_DLG_LABEL, 5, 158 + 15 + 2, 50, 16, BS_NOTIFY
-	COMBOBOX		IDC_DLG_EXIT_BY_ESCAPE, 55, 155 + 15 + 2, 140, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	LTEXT		   "Grid", IDC_DLG_GRID_LABEL, 5, 40, 25, 14, SS_LEFT
+	LTEXT		   "TEXT", IDC_DLG_COLOR + 6, 31, 38, 31, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY
+	LTEXT		   "NULL", IDC_DLG_COLOR + 7, 63, 38, 31, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "BLOB", IDC_DLG_COLOR + 8, 95, 38, 31, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "INT", IDC_DLG_COLOR + 9, 127, 38, 31, 12, SS_CENTER  | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "REAL", IDC_DLG_COLOR + 10, 159, 38, 34, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
 
-	LTEXT		   "Editor indent", IDC_DLG_LABEL, 5, 149 - 20 + 30 + 15 + 15 + 2, 50, 14, SS_LEFT
-	COMBOBOX		IDC_DLG_INDENT, 55, 146 - 20 + 30 + 15 + 15 + 2, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	LTEXT	        "On Escape", IDC_DLG_ESCAPE_LABEL, 5, 59, 50, 16, BS_NOTIFY
+	COMBOBOX		IDC_DLG_EXIT_BY_ESCAPE, 55, 57, 140, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
-	LTEXT		   "Max rows in result output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 164 - 20 + 30 + 15 + 15 + 2, 150, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_ROW_LIMIT, 160, 162 - 20 + 30 + 15 + 15 + 2, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT		   "Editor indent", IDC_DLG_INDENT_LABEL, 5, 75, 50, 14, SS_LEFT
+	COMBOBOX		IDC_DLG_INDENT, 55, 73, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
-	LTEXT		   "Max rows in the terminal output. Use 0 as unlimit.", IDC_DLG_LABEL, 5, 179 - 20 + 30 + 15 + 15 + 2, 155, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_CLI_ROW_LIMIT, 160, 177 - 20 + 30 + 15 + 15 + 2, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT		   "Max rows in result output. Use 0 as unlimit.", IDC_DLG_ROW_LIMIT_LABEL, 5, 96, 150, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_ROW_LIMIT, 160, 94, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Beep if the query took longer than N ms", IDC_DLG_LABEL, 5, 179 + 15 - 20 + 30 + 15 + 15 + 2, 150, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_BEEP_ON_QUERY_END, 160, 177 + 15 - 20 + 30 + 15 + 15 + 2, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT		   "Max rows in the terminal output. Use 0 as unlimit.", IDC_DLG_CLI_ROW_LIMIT_LABEL, 5, 111, 155, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_CLI_ROW_LIMIT, 160, 109, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Grid colors", IDC_DLG_LABEL, 5, 190 + 30 + 2 + 15 + 15 + 2, 35, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_GRID_COLOR_EDIT, 45 - 2, 190 + 30 + 15 + 15 + 2, 29, 12, ES_CENTER | NOT WS_VISIBLE | WS_CLIPSIBLINGS | WS_TABSTOP
+	LTEXT		   "Beep if the query took longer than N ms", IDC_DLG_BEEP_LABEL, 5, 126, 150, 14, SS_LEFT
+	EDITTEXT		IDC_DLG_BEEP_ON_QUERY_END, 160, 124, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "TEXT", IDC_DLG_GRID_COLOR, 45 - 2, 190 + 30 + 15 + 15 + 2, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY
-	LTEXT		   "NULL", IDC_DLG_GRID_COLOR + 1, 45 + 30*1 - 2, 190 + 30 + 15 + 15 + 2, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
-	LTEXT		   "BLOB", IDC_DLG_GRID_COLOR + 2, 45 + 30*2 - 2, 190 + 30 + 15 + 15 + 2, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
-	LTEXT		   "INT", IDC_DLG_GRID_COLOR + 3, 45 + 30*3 - 2, 190 + 30 + 15 + 15 + 2, 29, 12, SS_CENTER  | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
-	LTEXT		   "REAL", IDC_DLG_GRID_COLOR + 4, 45 + 30*4 - 2, 190 + 30 + 15 + 15 + 2, 29, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "Execute on a database connection", IDC_DLG_LABEL, 5, 142, 150, 10, SS_LEFT
+	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 152, 190, 20, 0
 
-	LTEXT		   "Execute on a database connection", IDC_DLG_LABEL, 5, 190 + 30 + 20 + 15 + 15 + 2, 150, 10, SS_LEFT
-	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 230 + 20 + 15 + 15 + 2, 190, 40, 0
-
-	PUSHBUTTON "OK", IDC_DLG_OK, 70, 276 + 20 + 15 + 15 + 2, 60, 14, WS_TABSTOP
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 135, 276 + 20 + 15 + 15 + 2, 60, 14, WS_TABSTOP
+	PUSHBUTTON "OK", IDC_DLG_OK, 145, 181, 60, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 210, 181, 60, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -224,9 +230,9 @@ IDD_ENCRYPTION DIALOGEX 50, 50, 220, 215
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	LTEXT "Password", IDC_DLG_LABEL, 5, 7, 35, 14, SS_LEFT
-	EDITTEXT IDC_DLG_CIPHER_KEY, 40, 5, 305 - 130 - 40, 12, WS_BORDER | WS_TABSTOP
+	EDITTEXT IDC_DLG_CIPHER_KEY, 40, 5, 135, 12, WS_BORDER | WS_TABSTOP
 
-	AUTOCHECKBOX "Store", IDC_DLG_CIPHER_STORE_KEY, 305 - 130 + 7, 3, 30, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Store", IDC_DLG_CIPHER_STORE_KEY, 182, 3, 30, 16, BS_NOTIFY | WS_TABSTOP
 
 	LTEXT "Cipher", IDC_DLG_LABEL, 5, 7 + 15, 35, 14, SS_LEFT
 	COMBOBOX IDC_DLG_CIPHER, 40, 5 + 15, 305 - 130, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
@@ -367,6 +373,40 @@ IDD_FK_SELECTOR DIALOGEX 50, 50, 300, 200
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
 	CONTROL "", IDC_DLG_ROWS, WC_LISTVIEW, WS_TABSTOP | LVS_AUTOARRANGE | LVS_REPORT | LVS_SHOWSELALWAYS | LVS_SINGLESEL, 0, 0, 100, 100, WS_EX_STATICEDGE
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_COLOR_PICKER DIALOGEX 30, 60, 150, 184
+	STYLE DS_MODALFRAME | WS_CAPTION | WS_POPUP | WS_SYSMENU
+	CAPTION "Color"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	CONTROL "", COLOR_CURRENT, WC_STATIC, SS_SUNKEN | SS_SIMPLE | WS_CHILD, 4, 4, 140, 14
+	CONTROL "", COLOR_RAINBOW, WC_STATIC, SS_SUNKEN | SS_SIMPLE | WS_CHILD, 4, 24, 118, 116
+	CONTROL "", COLOR_LUMSCROLL, WC_STATIC, SS_SUNKEN | SS_SIMPLE | WS_CHILD, 132, 24, 8, 116
+
+	LTEXT "Red", IDC_DLG_LABEL, 4, 146, 20, 9
+	EDITTEXT COLOR_RED, 22, 144, 22, 12, WS_GROUP | WS_TABSTOP | ES_CENTER
+	LTEXT "Green", IDC_DLG_LABEL, 50, 146, 24, 9
+	EDITTEXT COLOR_GREEN, 74, 144, 22, 12, WS_GROUP | WS_TABSTOP | ES_CENTER
+	LTEXT "Blue", IDC_DLG_LABEL, 102, 146, 24, 9
+	EDITTEXT COLOR_BLUE, 122, 144, 22, 12, WS_GROUP | WS_TABSTOP | ES_CENTER
+
+	DEFPUSHBUTTON   "OK", IDOK, 4 + 50, 166, 44, 14, WS_GROUP | WS_TABSTOP
+	PUSHBUTTON      "Cancel", IDCANCEL, 52 + 50, 166, 44, 14, WS_GROUP | WS_TABSTOP
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_URI_DB_PATH DIALOGEX 50, 50, 200, 73
+	STYLE DS_MODALFRAME | WS_CAPTION | WS_POPUP | WS_SYSMENU
+	CAPTION "URI path"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	COMBOBOX IDC_DLG_DATABASE, 5, 5, 190, 120, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWN | CBS_HASSTRINGS
+	LTEXT "Example: file:C:/data.db?vfs=apndvfs\nUse empty path to open an in-memory database.", IDC_DLG_LABEL, 5, 25, 190, 20
+
+	PUSHBUTTON "OK", IDC_DLG_OK, 90, 55, 50, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 145, 55, 50, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -1086,7 +1126,7 @@ BEGIN
 		"Shift + Tab - Return to a previous field\n\n"
 
 	IDS_TIPS "* Hold Control while opening the database to open it read-only.\n\n" \
-		"* Hold Shift while opening the database to open empty in-memory database.\n\n" \
+		"* Hold Shift while opening/attaching to get a database by URI.\n\n" \
 		"* Only the selected part of the query will be executed.\n\n" \
 		"* Hold Ctrl on dropping a tree item to an editor to append a statement.\n\n" \
 		"* During a transaction the special indicator is displayed inside the status bar.\n\n" \
@@ -1198,5 +1238,6 @@ IDB_TOOLBAR_DIAGRAM BITMAP "resources/toolbar_diagram.bmp"
 IDB_TOOLBAR_FUNCTIONS BITMAP "resources/toolbar_functions.bmp"
 IDB_TAB BITMAP "resources/tab.bmp"
 
+IDR_INIT RCDATA "resources/init.sql"
 IDR_HELP   RCDATA "resources/help.sql"
 IDR_EXCEL  RCDATA "resources/template.xlsx"
