--- a/src/resource.rc
+++ b/src/resource.rc
@@ -195,11 +195,12 @@ BEGIN
 	LTEXT "PRGM", IDC_DLG_COLOR + 5, 167, 22, 26, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
 
 	LTEXT		   "Grid", IDC_DLG_GRID_LABEL, 5, 40, 25, 14, SS_LEFT
-	LTEXT		   "TEXT", IDC_DLG_COLOR + 6, 31, 38, 31, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY
-	LTEXT		   "NULL", IDC_DLG_COLOR + 7, 63, 38, 31, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
-	LTEXT		   "BLOB", IDC_DLG_COLOR + 8, 95, 38, 31, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
-	LTEXT		   "INT", IDC_DLG_COLOR + 9, 127, 38, 31, 12, SS_CENTER  | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
-	LTEXT		   "REAL", IDC_DLG_COLOR + 10, 159, 38, 34, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "TEXT", IDC_DLG_COLOR + 6, 31, 38, 31 - 5, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY
+	LTEXT		   "NULL", IDC_DLG_COLOR + 7, 63 - 5, 38, 31 - 5, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "BLOB", IDC_DLG_COLOR + 8, 95 - 10, 38, 31 - 5, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "INT", IDC_DLG_COLOR + 9, 127 - 15, 38, 31 - 5 , 12, SS_CENTER  | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "REAL", IDC_DLG_COLOR + 10, 159 - 20, 38, 31 - 5, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
+	LTEXT		   "CURR", IDC_DLG_COLOR + 11, 191 - 25, 38, 31 - 3, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY | WS_CLIPSIBLINGS
 
 	LTEXT	        "On Escape", IDC_DLG_ESCAPE_LABEL, 5, 59, 50, 16, BS_NOTIFY
 	COMBOBOX		IDC_DLG_EXIT_BY_ESCAPE, 55, 57, 140, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
@@ -616,7 +617,7 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_TOOL_DESKTOP_SHORTCUT DIALOGEX 50, 50, 200, 60
+IDD_TOOL_DESKTOP_SHORTCUT DIALOGEX 50, 50, 200, 75
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
 	CAPTION "Desktop shortcut"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -624,11 +625,13 @@ BEGIN
 	LTEXT "Link name", IDC_DLG_LABEL, 5, 7, 45, 14, SS_LEFT
 	EDITTEXT IDC_DLG_LINK_NAME, 50, 5, 145, 12
 
-	LTEXT "Table/View", IDC_DLG_LABEL, 5, 7 + 15, 45, 14, SS_LEFT
-	COMBOBOX IDC_DLG_TABLENAME, 50, 5 + 15, 145, 200, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_VISIBLE
+	LTEXT "Table/View", IDC_DLG_LABEL, 5, 22, 45, 14, SS_LEFT
+	COMBOBOX IDC_DLG_TABLENAME, 50, 20, 145, 200, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS | WS_VISIBLE
 
-	PUSHBUTTON "OK", IDC_DLG_OK, 90, 42, 50, 14, WS_TABSTOP
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 145, 42, 50, 14, WS_TABSTOP
+	AUTOCHECKBOX "Open the database in read-only mode", IDC_DLG_READ_ONLY, 5, 35, 190, 16
+
+	PUSHBUTTON "OK", IDC_DLG_OK, 90, 57, 50, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 145, 57, 50, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -889,7 +892,7 @@ BEGIN
 	POPUP "Result"
 	BEGIN
 		MENUITEM "Copy cell", IDM_RESULT_COPY_CELL
-		MENUITEM "Copy row", IDM_RESULT_COPY_ROW
+		MENUITEM "Copy row(s)", IDM_RESULT_COPY_ROW
 		MENUITEM SEPARATOR
 		MENUITEM "Column filters", IDM_RESULT_FILTERS
 		MENUITEM "Value preview", IDM_RESULT_PREVIEW
@@ -932,7 +935,7 @@ BEGIN
 		MENUITEM "Duplicate", IDM_ROW_DUPLICATE
 		MENUITEM SEPARATOR
 		MENUITEM "Copy cell to clipboard", IDM_RESULT_COPY_CELL
-		MENUITEM "Copy row to clipboard", IDM_RESULT_COPY_ROW
+		MENUITEM "Copy row(s) to clipboard", IDM_RESULT_COPY_ROW
 		MENUITEM SEPARATOR
 		MENUITEM "Export to csv", IDM_RESULT_EXPORT
 	END
@@ -944,7 +947,7 @@ BEGIN
 	POPUP "View data"
 	BEGIN
 		MENUITEM "Copy cell to clipboard", IDM_RESULT_COPY_CELL
-		MENUITEM "Copy row to clipboard", IDM_RESULT_COPY_ROW
+		MENUITEM "Copy row(s) to clipboard", IDM_RESULT_COPY_ROW
 		MENUITEM SEPARATOR
 		MENUITEM "Export to csv", IDM_RESULT_EXPORT
 	END
@@ -1107,6 +1110,7 @@ BEGIN
 		"Ctrl + Click - View a cell value\n" \
 		"Ctrl + Tab - Toggle to a next result\n" \
 		"Ctrl + 1, Ctrl + 2, ... - Sort by column 1, 2, ... \n" \
+		"Ctrl + I - Invert row selection\n" \
 		"Ctrl + Shift + C - Copy selected rows to clipboard with a header\n" \
 		"Alt + Click - Show referenced data\n" \
 		"Alt + Double Click - Drill-down by referenced value\n" \
