--- a/src/resource.rc
+++ b/src/resource.rc
@@ -165,26 +165,28 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_SETTINGS DIALOGEX 50, 50, 415, 200
+IDD_SETTINGS DIALOGEX 50, 50, 215, 205
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME | WS_CLIPCHILDREN
 	CAPTION "Settings"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	AUTOCHECKBOX "Autoload extensions", IDC_DLG_AUTOLOAD, 220, 3, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Open last database on startup", IDC_DLG_RESTORE_DB, 220, 18, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Restore editor tabs on startup", IDC_DLG_RESTORE_EDITOR, 220, 33, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Word wrap a text in an editor by default", IDC_DLG_WORD_WRAP, 220, 48, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Use TAB instead ENTER to commit autocomplete", IDC_DLG_TAB_AUTOCOMPLETE, 220, 63, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Ask when deleting a row", IDC_DLG_ASK_DELETE, 220, 78, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Turn off disk synchronization for batch operations", IDC_DLG_SYNC_OFF, 220, 93, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 220, 108, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Enable built-in REST web server on port", IDC_DLG_HTTP_SERVER, 220, 123, 150, 16, BS_NOTIFY | WS_TABSTOP
-	EDITTEXT IDC_DLG_HTTP_SERVER_PORT, 375, 125, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
-	AUTOCHECKBOX "Check for updates automatically", IDC_DLG_CHECK_UPDATES, 220, 138, 180, 16, BS_NOTIFY | WS_TABSTOP
+	CONTROL "", IDC_DLG_SETTING_TAB, WC_TABCONTROL, TCS_FIXEDWIDTH, 5, 5, 205, 175, WS_EX_CONTROLPARENT
 
-	LTEXT "Font", IDC_DLG_FONT_LABEL, 5, 7, 20, 14, SS_LEFT
-	COMBOBOX IDC_DLG_FONT_FAMILY, 31, 5, 129, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWN | CBS_HASSTRINGS
-	COMBOBOX IDC_DLG_FONT_SIZE, 165, 5, 30, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	AUTOCHECKBOX "Autoload extensions", IDC_DLG_AUTOLOAD, 5, 3 +0, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Open last database on startup", IDC_DLG_RESTORE_DB, 5, 18+0, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Restore editor tabs on startup", IDC_DLG_RESTORE_EDITOR, 5, 33+0, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Word wrap a text in an editor by default", IDC_DLG_WORD_WRAP, 5, 48+0, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Use TAB instead ENTER to commit autocomplete", IDC_DLG_TAB_AUTOCOMPLETE, 5, 63+0, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Ask when deleting a row", IDC_DLG_ASK_DELETE, 5, 78+0, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Turn off disk synchronization for batch operations", IDC_DLG_SYNC_OFF, 5, 93+0, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 5, 108+0, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Enable built-in REST web server on port", IDC_DLG_HTTP_SERVER, 5, 123+0, 145, 16, BS_NOTIFY | WS_TABSTOP
+	EDITTEXT IDC_DLG_HTTP_SERVER_PORT, 375 - 225, 125, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	AUTOCHECKBOX "Check for updates automatically", IDC_DLG_CHECK_UPDATES, 5, 138+0, 180, 16, BS_NOTIFY | WS_TABSTOP
+
+	LTEXT "Font", IDC_DLG_FONT_LABEL, 5, 7+0, 20, 14, SS_LEFT
+	COMBOBOX IDC_DLG_FONT_FAMILY, 31, 5+0, 129, 10, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	COMBOBOX IDC_DLG_FONT_SIZE, 165, 5+0, 30, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
 	LTEXT "Editor", IDC_DLG_EDITOR_LABEL, 5, 24, 25, 14, SS_LEFT
 	LTEXT "KWRD", IDC_DLG_COLOR, 31, 22, 27, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY
@@ -217,11 +219,15 @@ BEGIN
 	LTEXT		   "Beep if the query took longer than N ms", IDC_DLG_BEEP_LABEL, 5, 126, 150, 14, SS_LEFT
 	EDITTEXT		IDC_DLG_BEEP_ON_QUERY_END, 160, 124, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Execute on a database connection", IDC_DLG_LABEL, 5, 142, 150, 10, SS_LEFT
-	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 152, 190, 20, 0
+	LTEXT		   "Execute on a database connection", IDC_DLG_STARTUP_LABEL, 5, 5, 150, 10, SS_LEFT
+	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 17, 190, 40, 0
 
-	PUSHBUTTON "OK", IDC_DLG_OK, 145, 181, 60, 14, WS_TABSTOP
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 210, 181, 60, 14, WS_TABSTOP
+	LTEXT		   "Google API key", IDC_DLG_GOOGLE_KEY_LABEL, 5, 65, 150, 10, SS_LEFT
+	CONTROL         "", IDC_DLG_GOOGLE_KEY, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_AUTOHSCROLL | ES_WANTRETURN, 5, 77, 190, 12, 0
+
+
+	PUSHBUTTON "OK", IDC_DLG_OK, 85, 186, 60, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 150, 186, 60, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -508,6 +514,27 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
+IDD_TOOL_IMPORT_SHEET DIALOGEX 300, 100, 230, 200
+	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
+	CAPTION "Import Google sheet to table"
+	FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+	LTEXT "ID", IDC_DLG_LABEL, 5, 7, 30, 14, SS_LEFT
+	COMBOBOX IDC_DLG_SHEET_ID, 35, 5, 190, 120, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS | CBS_AUTOHSCROLL
+	LTEXT "Sheet", IDC_DLG_LABEL, 5, 23, 30, 14, SS_LEFT
+	COMBOBOX IDC_DLG_SHEET_NAME, 35, 21, 190, 120, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS | CBS_AUTOHSCROLL
+	LTEXT "Range", IDC_DLG_LABEL, 5, 39, 40, 14, SS_LEFT
+	EDITTEXT IDC_DLG_SHEET_RANGE, 35, 37, 60, 12, WS_BORDER | WS_TABSTOP | ES_CENTER
+	AUTOCHECKBOX "Column names in the first line", IDC_DLG_ISCOLUMNS, 120, 35, 120, 16, BS_NOTIFY | WS_TABSTOP
+	LTEXT "Target table name", IDC_DLG_LABEL, 5, 39 + 17, 60, 14, SS_LEFT
+	EDITTEXT IDC_DLG_TABLENAME, 70, 37 + 17, 155, 12, WS_BORDER | WS_TABSTOP | ES_LEFT
+	CONTROL "", IDC_DLG_PREVIEW, WC_LISTVIEW, WS_TABSTOP | LVS_AUTOARRANGE | LVS_REPORT | LVS_NOSORTHEADER | LVS_SHOWSELALWAYS, 5, 75, 220, 100, WS_EX_STATICEDGE
+
+	PUSHBUTTON "OK", IDC_DLG_OK, 70 + 50, 125 + 57, 50, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 125 + 50, 125 + 57, 50, 14, WS_TABSTOP
+END
+
+LANGUAGE 0, SUBLANG_NEUTRAL
 IDD_TOOL_EXPORT_CSV DIALOGEX 50, 50, 174, 100
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME
 	CAPTION "Export data of table/view to CSV file"
@@ -710,6 +737,7 @@ BEGIN
 			MENUITEM "SQL", IDM_IMPORT_SQL
 			MENUITEM "CSV", IDM_IMPORT_CSV
 			MENUITEM "JSON", IDM_IMPORT_JSON
+			MENUITEM "G Sheets", IDM_IMPORT_GOOGLE_SHEETS
 			MENUITEM "via ODBC", IDM_IMPORT_ODBC
 		END
 		POPUP "Export", GRAYED
@@ -1158,9 +1186,7 @@ BEGIN
 		"* An empty string is set to NULL when data is edit\n" \
 		"* Data diagram isn't accurate with building references in views/triggers\n"
 
-	IDS_EXTENSIONS L"Json1\n" \
-		"Various SQL functions and table-valued functions for processing JSON.\n\n" \
-		"XML\n" \
+	IDS_EXTENSIONS L"XML\n" \
 		"Text functions for processing XML: xml_valid(xml), xml_extract(xml, xpath, sep = """"), xml_append(xml, xpath, insertion, pos = after), xml_update(xml, xpath, replacement), xml_remove(xml, xpath) and a table-valued function - xml_each(xml, xpath).\n\n" \
 		"Fileio\n"\
 		"Implements functions to work with file system readfile(path) and writefile(path, data) and virtual table fsdir(path).\n\n" \
