--- a/src/resource.rc
+++ b/src/resource.rc
@@ -165,28 +165,29 @@ BEGIN
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
-IDD_SETTINGS DIALOGEX 50, 50, 215, 205
+IDD_SETTINGS DIALOGEX 50, 50, 215, 220
 	STYLE WS_OVERLAPPED | WS_CAPTION | WS_SYSMENU | DS_MODALFRAME | WS_CLIPCHILDREN
 	CAPTION "Settings"
 	FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-	CONTROL "", IDC_DLG_SETTING_TAB, WC_TABCONTROL, TCS_FIXEDWIDTH, 5, 5, 205, 175, WS_EX_CONTROLPARENT
+	CONTROL "", IDC_DLG_SETTING_TAB, WC_TABCONTROL, TCS_FIXEDWIDTH, 5, 5, 205, 190, WS_EX_CONTROLPARENT
 
-	AUTOCHECKBOX "Autoload extensions", IDC_DLG_AUTOLOAD, 5, 3 +0, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Open last database on startup", IDC_DLG_RESTORE_DB, 5, 18+0, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Restore editor tabs on startup", IDC_DLG_RESTORE_EDITOR, 5, 33+0, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Word wrap a text in an editor by default", IDC_DLG_WORD_WRAP, 5, 48+0, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Use TAB instead ENTER to commit autocomplete", IDC_DLG_TAB_AUTOCOMPLETE, 5, 63+0, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Ask when deleting a row", IDC_DLG_ASK_DELETE, 5, 78+0, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Turn off disk synchronization for batch operations", IDC_DLG_SYNC_OFF, 5, 93+0, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 5, 108+0, 180, 16, BS_NOTIFY | WS_TABSTOP
-	AUTOCHECKBOX "Enable built-in REST web server on port", IDC_DLG_HTTP_SERVER, 5, 123+0, 145, 16, BS_NOTIFY | WS_TABSTOP
-	EDITTEXT IDC_DLG_HTTP_SERVER_PORT, 375 - 225, 125, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
-	AUTOCHECKBOX "Check for updates automatically", IDC_DLG_CHECK_UPDATES, 5, 138+0, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Autoload extensions", IDC_DLG_AUTOLOAD, 5, 3, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Open last database on startup", IDC_DLG_RESTORE_DB, 5, 18, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Restore editor tabs on startup", IDC_DLG_RESTORE_EDITOR, 5, 33, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Word wrap a text in an editor by default", IDC_DLG_WORD_WRAP, 5, 48, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Use TAB instead ENTER to commit autocomplete", IDC_DLG_TAB_AUTOCOMPLETE, 5, 63, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Disable autocomplete help", IDC_DLG_DISABLE_HELP, 5, 78, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Ask when deleting a row", IDC_DLG_ASK_DELETE, 5, 93, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Turn off disk synchronization for batch operations", IDC_DLG_SYNC_OFF, 5, 108, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Retain encrypted database passphrase in memory", IDC_DLG_RETAIN_PASSPHRASE, 5, 123, 180, 16, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Enable built-in REST web server on port", IDC_DLG_HTTP_SERVER, 5, 138, 145, 16, BS_NOTIFY | WS_TABSTOP
+	EDITTEXT IDC_DLG_HTTP_SERVER_PORT, 150, 140, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	AUTOCHECKBOX "Check for updates automatically", IDC_DLG_CHECK_UPDATES, 5, 153, 180, 16, BS_NOTIFY | WS_TABSTOP
 
-	LTEXT "Font", IDC_DLG_FONT_LABEL, 5, 7+0, 20, 14, SS_LEFT
-	COMBOBOX IDC_DLG_FONT_FAMILY, 31, 5+0, 129, 10, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
-	COMBOBOX IDC_DLG_FONT_SIZE, 165, 5+0, 30, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	LTEXT "Font", IDC_DLG_FONT_LABEL, 5, 7, 20, 14, SS_LEFT
+	COMBOBOX IDC_DLG_FONT_FAMILY, 31, 5, 129, 10, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	COMBOBOX IDC_DLG_FONT_SIZE, 165, 5, 30, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
 	LTEXT "Editor", IDC_DLG_EDITOR_LABEL, 5, 24, 25, 14, SS_LEFT
 	LTEXT "KWRD", IDC_DLG_COLOR, 31, 22, 27, 12, SS_CENTER | SS_CENTERIMAGE | SS_NOTIFY
@@ -207,27 +208,30 @@ BEGIN
 	LTEXT	        "On Escape", IDC_DLG_ESCAPE_LABEL, 5, 59, 50, 16, BS_NOTIFY
 	COMBOBOX		IDC_DLG_EXIT_BY_ESCAPE, 55, 57, 140, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
-	LTEXT		   "Editor indent", IDC_DLG_INDENT_LABEL, 5, 75, 50, 14, SS_LEFT
-	COMBOBOX		IDC_DLG_INDENT, 55, 73, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
+	LTEXT "Editor indent", IDC_DLG_INDENT_LABEL, 5, 75, 50, 14, SS_LEFT
+	COMBOBOX IDC_DLG_INDENT, 55, 73, 65, 100, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST | CBS_HASSTRINGS
 
-	LTEXT		   "Max rows in result output. Use 0 as unlimit.", IDC_DLG_ROW_LIMIT_LABEL, 5, 96, 150, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_ROW_LIMIT, 160, 94, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT "Max rows in result output. Use 0 as unlimit.", IDC_DLG_ROW_LIMIT_LABEL, 5, 96, 150, 14, SS_LEFT
+	EDITTEXT IDC_DLG_ROW_LIMIT, 160, 94, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Max rows in the terminal output. Use 0 as unlimit.", IDC_DLG_CLI_ROW_LIMIT_LABEL, 5, 111, 155, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_CLI_ROW_LIMIT, 160, 109, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT "Max rows in the terminal output. Use 0 as unlimit.", IDC_DLG_CLI_ROW_LIMIT_LABEL, 5, 111, 155, 14, SS_LEFT
+	EDITTEXT IDC_DLG_CLI_ROW_LIMIT, 160, 109, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Beep if the query took longer than N ms", IDC_DLG_BEEP_LABEL, 5, 126, 150, 14, SS_LEFT
-	EDITTEXT		IDC_DLG_BEEP_ON_QUERY_END, 160, 124, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
+	LTEXT "Beep if the query took longer than N ms", IDC_DLG_BEEP_LABEL, 5, 126, 150, 14, SS_LEFT
+	EDITTEXT IDC_DLG_BEEP_ON_QUERY_END, 160, 124, 33, 12, WS_BORDER | WS_TABSTOP | ES_CENTER | ES_NUMBER
 
-	LTEXT		   "Execute on a database connection", IDC_DLG_STARTUP_LABEL, 5, 5, 150, 10, SS_LEFT
-	CONTROL         "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 17, 190, 40, 0
+	LTEXT "Execute on a database connection", IDC_DLG_STARTUP_LABEL, 5, 5, 150, 10, SS_LEFT
+	CONTROL "", IDC_DLG_STARTUP, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_MULTILINE | ES_AUTOHSCROLL | ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL, 5, 17, 190, 40, 0
 
-	LTEXT		   "Google API key", IDC_DLG_GOOGLE_KEY_LABEL, 5, 65, 150, 10, SS_LEFT
-	CONTROL         "", IDC_DLG_GOOGLE_KEY, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_AUTOHSCROLL | ES_WANTRETURN, 5, 77, 190, 12, 0
+	AUTOCHECKBOX "Use foreign keys (pragma foreign_keys = on)", IDC_DLG_FOREIGN_KEYS, 5, 60, 190, 14, BS_NOTIFY | WS_TABSTOP
+	AUTOCHECKBOX "Use unsafe renaming (pragma legacy_alter_table = on)", IDC_DLG_LEGACY_RENAME, 5, 71, 190, 14, BS_NOTIFY | WS_TABSTOP
+
+	LTEXT "Google API key", IDC_DLG_GOOGLE_KEY_LABEL, 5, 93, 150, 10, SS_LEFT
+	CONTROL "", IDC_DLG_GOOGLE_KEY, WC_EDIT, WS_BORDER | WS_TABSTOP | ES_AUTOHSCROLL | ES_WANTRETURN, 5, 105, 190, 12, 0
 
 
-	PUSHBUTTON "OK", IDC_DLG_OK, 85, 186, 60, 14, WS_TABSTOP
-	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 150, 186, 60, 14, WS_TABSTOP
+	PUSHBUTTON "OK", IDC_DLG_OK, 85, 201, 60, 14, WS_TABSTOP
+	PUSHBUTTON "Cancel", IDC_DLG_CANCEL, 150, 201, 60, 14, WS_TABSTOP
 END
 
 LANGUAGE 0, SUBLANG_NEUTRAL
@@ -816,6 +820,7 @@ BEGIN
 		MENUITEM SEPARATOR
 		MENUITEM "Edit", IDM_EDIT
 		MENUITEM "Rename", IDM_RENAME
+		MENUITEM "Duplicate", IDM_DUPLICATE
 		MENUITEM "Delete", IDM_DELETE
 		MENUITEM "Clear", IDM_ERASE_DATA
 		MENUITEM SEPARATOR
